--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,15 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Vend+Sans:ital,wght@0,300..700;1,300..700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Story+Script&display=swap");
+
 @import "tailwindcss";
+
+@theme {
+  --font-roboto: Roboto, "sans-serif";
+  --font-roboto-mono: Roboto Mono, "sans-serif";
+  --font-bebas-neue: Bebas Neue, "sans-serif";
+  --font-vend-sans: Vend Sans, "sans-serif";
+  --font-story-script: Story Script, "sans-serif";
+}
